--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <p>Hello, world!</p>
+    <p>If you are reading this, you should try <a href="mailto:chris@wugs.me">sending me an email!</a></p>
   </body>
 </html>
