--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <p>Hello, world!</p>
     <p>If you are reading this, you should try <a href="mailto:chris@wugs.me">sending me an email</a>!</p>
-    <p>tried it</p>
+    <p>tried it, again</p>
   </body>
 </html>
