--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 						<li><a href="https://www.facebook.com/chrishy" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/chrishy/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/chrhyman" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:chris@wugs.me" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:chris@wugs.me" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Chris Hyman.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
