--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>wugs &emdash; Chris Hyman</title>
+		<title>wugs &mdash; Chris Hyman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +18,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Home</a> &emdash; wugs.me</h1>
+					<h1><a href="index.html">Home</a> &mdash; wugs.me</h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="/index.html">Home</a></li>
