selfie and some basic page changes

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Home</a> &mdash; wugs.me</h1>
+					<h1><a href="http://wugs.me">Home</a> &mdash; wugs.me</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="/index.html">Home</a></li>
+							<li><a href="http://wugs.me">Home</a></li>
 							<li>
 								<a href="#" class="icon fa-angle-down">Links</a>
 								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
+									<li><a href="#">Placeholder</a></li>
+									<li><a href="#">Placeholder</a></li>
+									<li><a href="#">Placeholder</a></li>
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -39,7 +39,6 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -52,7 +51,10 @@
 
 			<!-- Main -->
 				<section id="main" class="container">
-
+					<section class="box">
+						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." /></span>Hello, my name is Chris.</p>
+					</section>
+					
 					<section class="box special">
 						<header class="major">
 							<h2>Introducing the ultimate mobile app
