--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<section class="box">
-						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." /></span>Hello, my name is Chris.</p>
+						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span>Hello, my name is Chris.</p>
 					</section>
-					
+
 					<section class="box special">
 						<header class="major">
 							<h2>Introducing the ultimate mobile app
