--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<section class="box">
-						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p><h2><span class="quote-left"></span>Hello, my name is Chris.<span class="quote-right"></span></h2><p>And now I continue.</p>
+						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p><h2><a class="quote-left" href="#"></a>Hello, my name is Chris.<a class="quote-right" href="#"></a></h2><p>And now I continue.</p>
 					</section>
 
 					<section class="box special">
