--- a/index.html
+++ b/index.html
@@ -52,7 +52,15 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<section class="box">
-						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p><h2><ul class="icons"><li><a class="icon quote-left" href="#"><span class="label">Quote</span></a></li></ul>Hello, my name is Chris.<ul class="icons"><li><a class="icon quote-right" href="#"><span class="label">Quote</span></a></li></ul></h2><p>And now I continue.</p>
+						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p>
+						<ul class="icons">
+							<li><a class="icon quote-left" href="#"><span class="label">Quote</span></a></li>
+						</ul>
+						<h2>Hello, my name is Chris.</h2>
+						<ul class="icons">
+							<li><a class="icon quote-right" href="#"><span class="label">Quote</span></a></li>
+						</ul>
+						<p>And now I continue.</p>
 					</section>
 
 					<section class="box special">
