--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 					<section class="box">
 						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p>
 						<ul class="icons">
-							<li><a class="icon quote-left" href="#"><span class="label">Quote</span></a></li>
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 						</ul>
-						<h2>Hello, my name is Chris.</h2>
-						<ul class="icons">
-							<li><a class="icon quote-right" href="#"><span class="label">Quote</span></a></li>
-						</ul>
-						<p>And now I continue.</p>
 					</section>
 
 					<section class="box special">
