--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 				<section id="main" class="container">
 					<section class="box">
 						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p>
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<ul align="center" class="icons">
+							<li><a href="#" class="icon quote-left"><span class="label">Twitter</span></a></li>
 							<li><h2>Hello, my name is Chris.</h2></li>
-							<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+							<li><a href="#" class="icon quote-right"><span class="label">Tumblr</span></a></li>
 						</ul>
 					</section>
 
