--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
 				<section id="main" class="container">
 					<section class="box">
 						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p>
-						<ul align="center" class="icons">
+						<span align="center">
+						<ul class="icons">
 							<li><a href="#" class="icon quote-left"><span class="label">Twitter</span></a></li>
 							<li><h2>Hello, my name is Chris.</h2></li>
 							<li><a href="#" class="icon quote-right"><span class="label">Tumblr</span></a></li>
 						</ul>
+						</span>
 					</section>
 
 					<section class="box special">
