--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
 				<section id="main" class="container">
 					<section class="box">
 						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p>
-						<span align="center">
 						<ul class="icons">
-							<li><a href="#" class="icon quote-left"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon quote-left"><span class="label">Quote</span></a></li>
 							<li><h2>Hello, my name is Chris.</h2></li>
-							<li><a href="#" class="icon quote-right"><span class="label">Tumblr</span></a></li>
+							<li><a href="#" class="icon quote-right"><span class="label">Quote</span></a></li>
 						</ul>
-						</span>
+						<p>Thank you for visiting this website.</p>
 					</section>
 
 					<section class="box special">
