--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 					<section class="box">
 						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p>
 						<ul align="center" class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Quote</span></a></li>
+							<li><a href="#" class="icon fa-quote-left"><span class="label">Quote</span></a></li>
 							<li><h2>Hello, my name is Chris.</h2></li>
-							<li><a href="#" class="icon fa-twitter"><span class="label">Quote</span></a></li>
+							<li><a href="#" class="icon fa-quote-right"><span class="label">Quote</span></a></li>
 						</ul>
 						<p>Thank you for visiting this website.</p>
 					</section>
