--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<li><h2>Hello, my name is Chris.</h2></li>
 							<li><a href="#" class="icon fa-quote-right"><span class="label">Quote</span></a></li>
 						</ul>
-						<p>Thank you for visiting this website.</p>
+						<p>I'm an amateur programmer and avid Tweeter currently located in Las Vegas. Currently I work in technical support for <a href="http://lutron.com">Lutron</a> where I help customers and other clients with their lighting control devices. In May of 2016 I graduated from New York University with a BA in Linguistics and in French, with a minor in American Sign Language.</p>
 					</section>
 
 					<section class="box special">
