--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h1>Chris Hyman</h1>
+					<h2>Chris Hyman</h2>
 					<p>An amateur programmer who has absolutely no need for a personal website.</p>
 				</section>
 
@@ -61,38 +61,30 @@
 						<p>I'm an amateur programmer and avid Tweeter currently located in Las Vegas. Currently I work in technical support for <a href="http://lutron.com">Lutron</a> where I help customers and other clients with their lighting control devices. In May of 2016 I graduated from New York University with a BA in Linguistics and in French, with a minor in American Sign Language.</p>
 					</section>
 
-					<section class="box special">
-						<header class="major">
-							<h2>Introducing the ultimate mobile app
-							<br />
-							for doing stuff with your phone</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
-						</header>
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-					</section>
-
 					<section class="box special features">
 						<div class="features-row">
 							<section>
-								<span class="icon major fa-bolt accent2"></span>
+								<span class="icon major fa-twitter accent2"></span>
 								<h3>Magna etiam</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 							<section>
-								<span class="icon major fa-area-chart accent3"></span>
+								<span class="icon major fa-facebook accent3"></span>
 								<h3>Ipsum dolor</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
-						</div>
-						<div class="features-row">
 							<section>
-								<span class="icon major fa-cloud accent4"></span>
+								<span class="icon major fa-instagram accent4"></span>
 								<h3>Sed feugiat</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 							<section>
-								<span class="icon major fa-lock accent5"></span>
+								<span class="icon major fa-github accent5"></span>
+								<h3>Enim phasellus</h3>
+								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+							</section>
+							<section>
+								<span class="icon major fa-envelope-o accent5"></span>
 								<h3>Enim phasellus</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
