--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 						<p>I'm an amateur programmer and avid Tweeter currently located in Las Vegas. Currently I work in technical support for <a href="http://lutron.com">Lutron</a> where I help customers and other clients with their lighting control devices. In May of 2016 I graduated from New York University with a BA in Linguistics and in French, with a minor in American Sign Language.</p>
 					</section>
 
-					<section class="box special features">
+					<section class="box special">
+						<h2>Social</h2>
 						<span class="icon major fa-twitter accent2"></span>
 						<span class="icon major fa-facebook accent2"></span>
 						<span class="icon major fa-instagram accent2"></span>
