--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 					<section class="box special">
 						<h2>Social</h2>
-						<span class="icon major fa-twitter accent2"></span>
+						<a href="https://twitter.com/vvugs"><span class="icon major fa-twitter accent2"></span></a>
 						<span class="icon major fa-facebook accent2"></span>
 						<span class="icon major fa-instagram accent2"></span>
 						<span class="icon major fa-github accent2"></span>
