--- a/index.html
+++ b/index.html
@@ -63,18 +63,13 @@
 
 					<section class="box special">
 						<h2>Social</h2>
-						<ul>
-							<li><a href="https://twitter.com/vvugs" class="icon major fa-twitter accent2"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/chrishy" class="icon major fa-facebook accent2"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/chrishy/" class="icon major fa-instagram accent2"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/chrhyman" class="icon major fa-github accent2"><span class="label">Github</span></a></li>
-							<li><a href="mailto:chris@wugs.me" class="icon major fa-envelope-o accent2"><span class="label">Email</span></a></li>
-						</ul>
-						<a href="https://twitter.com/vvugs"><span class="icon major fa-twitter accent2"></span></a>
-						<span class="icon major fa-facebook accent2"></span>
-						<span class="icon major fa-instagram accent2"></span>
-						<span class="icon major fa-github accent2"></span>
-						<span class="icon major fa-envelope-o accent2"></span>
+						<p>
+							<a href="https://twitter.com/vvugs" class="icon major fa-twitter accent2"><span class="label">Twitter</span></a>
+							<a href="https://www.facebook.com/chrishy" class="icon major fa-facebook accent2"><span class="label">Facebook</span></a>
+							<a href="https://www.instagram.com/chrishy/" class="icon major fa-instagram accent2"><span class="label">Instagram</span></a>
+							<a href="https://github.com/chrhyman" class="icon major fa-github accent2"><span class="label">Github</span></a>
+							<a href="mailto:chris@wugs.me" class="icon major fa-envelope-o accent2"><span class="label">Email</span></a>
+						</p>
 					</section>
 
 					<div class="row">
