fuck it, we'll do it live

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 						<h2>Social</h2>
 						<p>
 							<a href="https://twitter.com/vvugs" class="icon major fa-twitter accent2"><span class="label">Twitter</span></a>
-							<span width="15px">&nbsp;</span>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="https://www.facebook.com/chrishy" class="icon major fa-facebook accent2"><span class="label">Facebook</span></a>
-							<span width="15px">&nbsp;</span>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="https://www.instagram.com/chrishy/" class="icon major fa-instagram accent2"><span class="label">Instagram</span></a>
-							<span width="15px">&nbsp;</span>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="https://github.com/chrhyman" class="icon major fa-github accent2"><span class="label">Github</span></a>
-							<span width="15px">&nbsp;</span>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="mailto:chris@wugs.me" class="icon major fa-envelope-o accent2"><span class="label">Email</span></a>
 						</p>
 					</section>
