--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>Chris Hyman</h2>
-					<p>An amateur programmer who has absolutely no need for a personal website.</p>
+					<p>Someone with absolutely no need for a personal website.</p>
 				</section>
 
 			<!-- Main -->
@@ -64,15 +64,15 @@
 					<section class="box special">
 						<h2>Social</h2>
 						<p>
-							<a href="https://twitter.com/vvugs" class="icon major fa-twitter accent2"><span class="label">Twitter</span></a>
+							<a href="https://twitter.com/vvugs" class="icon major fa-twitter accent-tw"><span class="label">Twitter</span></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://www.facebook.com/chrishy" class="icon major fa-facebook accent2"><span class="label">Facebook</span></a>
+							<a href="https://www.facebook.com/chrishy" class="icon major fa-facebook accent-fb"><span class="label">Facebook</span></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://www.instagram.com/chrishy/" class="icon major fa-instagram accent2"><span class="label">Instagram</span></a>
+							<a href="https://www.instagram.com/chrishy/" class="icon major fa-instagram accent-ig"><span class="label">Instagram</span></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://github.com/chrhyman" class="icon major fa-github accent2"><span class="label">Github</span></a>
+							<a href="https://github.com/chrhyman" class="icon major fa-github accent-git"><span class="label">Github</span></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="mailto:chris@wugs.me" class="icon major fa-envelope-o accent2"><span class="label">Email</span></a>
+							<a href="mailto:chris@wugs.me" class="icon major fa-envelope-o accent-em"><span class="label">Email</span></a>
 						</p>
 					</section>
 
