--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 					<section class="box special">
 						<h2>Social</h2>
 						<p>
-							<a href="https://twitter.com/vvugs" class="icon major fa-twitter accent-tw"><span class="label">Twitter</span></a>
+							<a href="https://twitter.com/vvugs" class="icon major fa-twitter accent-tw social"><span class="label">Twitter</span></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://www.facebook.com/chrishy" class="icon major fa-facebook accent-fb"><span class="label">Facebook</span></a>
+							<a href="https://www.facebook.com/chrishy" class="icon major fa-facebook accent-fb social"><span class="label">Facebook</span></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://www.instagram.com/chrishy/" class="icon major fa-instagram accent-ig"><span class="label">Instagram</span></a>
+							<a href="https://www.instagram.com/chrishy/" class="icon major fa-instagram accent-ig social"><span class="label">Instagram</span></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://github.com/chrhyman" class="icon major fa-github accent-git"><span class="label">Github</span></a>
+							<a href="https://github.com/chrhyman" class="icon major fa-github accent-git social"><span class="label">Github</span></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="mailto:chris@wugs.me" class="icon major fa-envelope-o accent-em"><span class="label">Email</span></a>
+							<a href="mailto:chris@wugs.me" class="icon major fa-envelope-o accent-em social"><span class="label">Email</span></a>
 						</p>
 					</section>
 
