taking out more filler

--- a/index.html
+++ b/index.html
@@ -65,62 +65,27 @@
 						<h2>Social</h2>
 						<p>
 							<a href="https://twitter.com/vvugs" class="icon major fa-twitter accent-tw social"><span class="label">Twitter</span></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="https://www.facebook.com/chrishy" class="icon major fa-facebook accent-fb social"><span class="label">Facebook</span></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="https://www.instagram.com/chrishy/" class="icon major fa-instagram accent-ig social"><span class="label">Instagram</span></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="https://github.com/chrhyman" class="icon major fa-github accent-git social"><span class="label">Github</span></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="mailto:chris@wugs.me" class="icon major fa-envelope-o accent-em social"><span class="label">Email</span></a>
 						</p>
 					</section>
-
-					<div class="row">
-						<div class="6u 12u(narrower)">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
-						</div>
-						<div class="6u 12u(narrower)">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
-						</div>
-					</div>
-
 				</section>
 
 			<!-- CTA -->
 				<section id="cta">
 
-					<h2>Sign up for beta access</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
+					<h2>Confused about "wugs"?</h2>
+					<p>Are you wondering what wugs are and aren't satisfied with the answer "a linguistics thing"? This might be the page for you.</p>
 
-					<form>
-						<div class="row uniform 50%">
-							<div class="8u 12u(mobilep)">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
-							</div>
-							<div class="4u 12u(mobilep)">
-								<input type="submit" value="Sign Up" class="fit" />
-							</div>
-						</div>
-					</form>
+					<ul class="actions">
+						<li><a href="#" class="button alt">Tell me about wugs!</a></li>
+					</ul>
 
 				</section>
 
@@ -134,7 +99,7 @@
 						<li><a href="mailto:chris@wugs.me" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Chris Hyman.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Chris Hyman</li><li><a href="http://html5up.net">Design</a></li>
 					</ul>
 				</footer>
 
