adding wugs explanation page

--- a/wugs.html
+++ b/wugs.html
@@ -18,7 +18,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="http://wugs.me">Home</a> &mdash; wugs.me</h1>
+					<h1><a href="http://wugs.me">Home</a> <span class="icon fa-angle-left"></span> wugs &mdash; wugs.me</h1>
 					<nav id="nav">
 						<ul>
 							<li>
@@ -42,49 +42,28 @@
 					</nav>
 				</header>
 
-			<!-- Banner -->
-				<section id="banner">
-					<h2>Chris Hyman</h2>
-					<p>Someone with absolutely no need for a personal website.</p>
-				</section>
-
-			<!-- Main -->
-				<section id="main" class="container">
-					<section class="box">
-						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="250px" /></span></p>
-						<ul align="center" class="icons">
-							<li><a href="#" class="icon fa-quote-left"><span class="label">Quote</span></a></li>
-							<li><h2>Hello, my name is Chris.</h2></li>
-							<li><a href="#" class="icon fa-quote-right"><span class="label">Quote</span></a></li>
-						</ul>
-						<p>I'm an amateur programmer and avid Tweeter currently located in Las Vegas. Currently I work in technical support for <a href="http://lutron.com">Lutron</a> where I help customers and other clients with their lighting control devices. In May of 2016 I graduated from New York University with a BA in Linguistics and in French, with a minor in American Sign Language.</p>
-					</section>
-
-					<section class="box special">
-						<h2>Social</h2>
-						<p>
-							<a href="https://twitter.com/vvugs" class="icon major fa-twitter accent-tw social"><span class="label">Twitter</span></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://www.facebook.com/chrishy" class="icon major fa-facebook accent-fb social"><span class="label">Facebook</span></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://www.instagram.com/chrishy/" class="icon major fa-instagram accent-ig social"><span class="label">Instagram</span></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://github.com/chrhyman" class="icon major fa-github accent-git social"><span class="label">Github</span></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="mailto:chris@wugs.me" class="icon major fa-envelope-o accent-em social"><span class="label">Email</span></a>
-						</p>
-					</section>
-				</section>
-
-			<!-- CTA -->
-				<section id="cta">
-
-					<h2>Confused about "wugs"?</h2>
-					<p>Are you wondering what wugs are and aren't satisfied with the answer "a linguistics thing"? This might be the page for you.</p>
-					<ul class="actions">
-						<li><a href="/wugs" class="button alt">Tell me about wugs!</a></li>
-					</ul>
-				</section>
+        <!-- Main -->
+  				<section id="main" class="container">
+  					<header>
+  						<h2>Generic</h2>
+  						<p>A generic page for every non-generic situation.</p>
+  					</header>
+  					<div class="box">
+  						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+  						<h3>This is a subheading</h3>
+  						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+  						<div class="row">
+  							<div class="6u 12u(mobilep)">
+  								<h3>And now a subheading</h3>
+  								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+  							</div>
+  							<div class="6u 12u(mobilep)">
+  								<h3>And another subheading</h3>
+  								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+  							</div>
+  						</div>
+  					</div>
+  				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
