--- a/wugs.html
+++ b/wugs.html
@@ -17,8 +17,8 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header" class="alt">
-					<h1><a href="http://wugs.me">Home</a> <span class="icon fa-angle-left"></span> wugs &mdash; wugs.me</h1>
+				<header id="header">
+					<h1><a href="http://wugs.me">Home</a> <a href="#" class="icon fa-angle-left"></a> wugs &mdash; wugs.me</h1>
 					<nav id="nav">
 						<ul>
 							<li>
