--- a/wugs.html
+++ b/wugs.html
@@ -18,7 +18,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="http://wugs.me">Home</a> <a href="#" class="icon fa-angle-left"></a> wugs &mdash; wugs.me</h1>
+					<h1><a href="http://wugs.me">Home</a>&nbsp;&nbsp;<span class="icon fa-angle-right"></span>&nbsp;&nbsp;wugs &mdash; wugs.me</h1>
 					<nav id="nav">
 						<ul>
 							<li>
