--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<section class="box">
-						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." width="10em" /></span></p>
+						<p><span class="image left"><img src="/images/selfie.jpg" alt="A picture of me." height="100em" /></span></p>
 						<ul align="center" class="icons">
 							<li><a href="#" class="icon fa-quote-left"><span class="label">Quote</span></a></li>
 							<li><h2>Hello, my name is Chris.</h2></li>
