some text on wugs

--- a/wugs.html
+++ b/wugs.html
@@ -46,12 +46,16 @@
   				<section id="main" class="container">
   					<header>
   						<h2>What is a wug?</h2>
-  						<p>A generic page for every non-generic situation.</p>
+  						<p>A simple cute cartoon, or a test of psycholinguistic ability?</p>
   					</header>
   					<div class="box">
   						<span class="image featured"><img src="images/wugs-banner.png" alt="wugs banner" /></span>
-  						<h3>This is a subheading</h3>
-  						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+  						<h3>Why do linguists care about this bird?</h3>
+							<p>One of the questions that deeply interests linguists is that of how children acquire Language. The idea of an infant getting such a small amount of input but developing a system of communication that is robust and adaptable is nothing short of astounding. As linguistics is a science like any other, one must attempt to follow the experimental method to provide empirical proof of theories about language development.</p>
+
+							<p>The “<b>Wug Test</b>” was developed by Dr. Jean Berko Gleason in 1958<sup>1</sup> as a psycholinguistic test of a child’s learning of English morphemes. The idea, in a nutshell, is to present a child with a brand new word and see if they can successfully modify it to follow English’s rules of allomorphy and pronunciation.</p>
+
+							<p><sup>1</sup> Berko, J. (1958). The child’s learning of English morphology. <i>WORD, 14</i>(2-3), 150-177. <a href=“http://dx.doi.org/10.1080/00437956.1958.11659661”>DOI.</a></p>
   						<div class="row">
   							<div class="6u 12u(mobilep)">
   								<h3>And now a subheading</h3>
