--- a/wugs.html
+++ b/wugs.html
@@ -46,7 +46,7 @@
   				<section id="main" class="container">
   					<header>
   						<h2>What is a wug?</h2>
-  						<p>A simple cute cartoon, or a test of psycholinguistic ability?</p>
+  						<p>Just a cute cartoon, or a test of psycholinguistic ability?</p>
   					</header>
   					<div class="box">
   						<span class="image featured"><img src="images/wugs-banner.png" alt="wugs banner" /></span>
@@ -62,7 +62,8 @@
   								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
   							</div>
   							<div class="6u 12u(mobilep)">
-  								<h3>And another subheading</h3>
+  								<h3>An example of the test</h3>
+									<p><span class="image right"><img src="/images/wugs-test.gif" alt="(Image of a 'wug') This is a wug. (Image of two) Now there is another one. There are two of them. There are two ______." /></span></p>
   								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
   							</div>
   						</div>
