--- a/wugs.html
+++ b/wugs.html
@@ -63,7 +63,7 @@
   							</div>
   							<div class="6u 12u(mobilep)">
   								<h3>An example of the test</h3>
-									<p><span class="image right"><img src="/images/wug-test.gif" alt="(Image of a 'wug') This is a wug. (Image of two) Now there is another one. There are two of them. There are two ______." width="30%" /></span></p>
+									<p><span class="image"><img src="/images/wug-test.gif" alt="(Image of a 'wug') This is a wug. (Image of two) Now there is another one. There are two of them. There are two ______." width="75%" /></span></p>
   								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
   							</div>
   						</div>
