--- a/wugs.html
+++ b/wugs.html
@@ -58,13 +58,13 @@
 							<p><sup>1</sup> Berko, J. (1958). The child’s learning of English morphology. <i>WORD, 14</i>(2-3), 150-177. <a href=“http://dx.doi.org/10.1080/00437956.1958.11659661”>DOI.</a></p>
   						<div class="row">
   							<div class="6u 12u(mobilep)">
-  								<h3>And now a subheading</h3>
-  								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+  								<h3>How does it work?</h3>
+  								<p>A child is presented with an image like the one to the right. The child must fill in the blank with the word they believe fits best. An adult, native English speaker would say "wugs" (rhymes with "mugs"). A child may say "two wug", "two wucks", "two wug-iz", "two wugses", among other incorrect pluralizations. This often depends on the age of the child, and with a lot of testing we can see some how children develop over time.</p>
+									<p>This test format can also be used to test real words. Irregular morphemes are a great test for kids because they show a very interesting linguistic pattern. For example, "one foot, two ____" will usually produce a pattern among kids where younger ones will say "two feet", slightly older kids will say "two foots", and then later on they'll say "two feet" again. The various stages show that children tend to memorize irregular forms, then generalize a pluralization rule, and then lastly learn individual exceptions to that general rule.</p>
   							</div>
   							<div class="6u 12u(mobilep)">
   								<h3>An example of the test</h3>
-									<p><span class="image"><img src="/images/wug-test.gif" alt="(Image of a 'wug') This is a wug. (Image of two) Now there is another one. There are two of them. There are two ______." width="75%" /></span></p>
-  								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+									<p align="center"><span class="image"><img src="/images/wug-test.gif" alt="(Image of a 'wug') This is a wug. (Image of two) Now there is another one. There are two of them. There are two ______." width="85%" /></span></p>
   							</div>
   						</div>
   					</div>
