yet another tooltip

--- a/wugs.html
+++ b/wugs.html
@@ -57,7 +57,9 @@
 								<span class="tiptext">Berko, J. (1958). The child’s learning of English morphology. <i>WORD, 14</i>(2-3), 150-177. <a href=“http://dx.doi.org/10.1080/00437956.1958.11659661”>DOI.</a></span>
 							</span> as a psycholinguistic test of a child’s learning of English <span class="tooltip">morphemes
 								<span class="tiptext">A <b>morpheme</b> is the smallest unit of meaning in a language, such as "dog" or the "s" that shows plurality in English. "Dogs" is one <i>word</i> made of two <i>morphemes</i>.</span>
-							</span>. The idea, in a nutshell, is to present a child with a brand new word and see if they can successfully modify it to follow English’s rules of allomorphy and pronunciation.</p>
+							</span>. The idea, in a nutshell, is to present a child with a brand new word and see if they can successfully modify it to follow English’s rules of <span class="tooltip">allomorphy
+								<span class="tiptext"><b>Allomorphs</b> are how one morpheme can be pronounced multiple ways depending on context, such as how the plural "s" in "dogs" and in "cats" is pronounced /z/ in one and /s/ in the other.</span>
+							</span> and pronunciation.</p>
   						<div class="row">
   							<div class="6u 12u(mobilep)">
   								<h3>How does it work?</h3>
