testing effect of 'special' class

--- a/wugs.html
+++ b/wugs.html
@@ -76,7 +76,7 @@
 						<div class="row">
 							<div class="6u 12u(narrower)">
 
-								<section class="box special">
+								<section class="box">
 									<h3>Academic importance</h3>
 									<p>The discussions raised by this paper greatly influenced psycholinguistics and other fields relating to language acquisition. Furthermore, it provided an easily-explained and accessible example of how linguistic research can be done. Thus, wugs have become one of the most identifiable symbols of the field of linguistics, even for subfields not directly related to phonology and morphology. On top of it all, the paper which discusses the test is extremely accessible and readable, and I encourage everyone who finds this interesting to take at least a cursory look!</p>
 									<ul class="actions">
@@ -90,9 +90,6 @@
 								<section class="box special">
 									<h3>Personal significance</h3>
 									<p>While I do have a BA in Linguistics with focuses outside of phonology, back in high school I did do a nine-month-long research project which emulated the setup of Dr. Gleason's original test. I went to a local elementary school and tested Kindergarten, 2nd grade, and 4th grade students on various morphological changes to real and made-up words. I also threw in a few non-standard English affixes like "what do you call a small wug?" which caused adults to disagree (wuglett, wuggie, etc.). After nine months of gathering, organizing, and analyzing the data, I like to think I earned my wug cred.</p>
-									<ul class="actions">
-										<li><a href="#" class="button alt">Learn More</a></li>
-									</ul>
 								</section>
 
 							</div>
