--- a/wugs.html
+++ b/wugs.html
@@ -72,27 +72,15 @@
   							</div>
   						</div>
   					</div>
-						<!-- CTA -->
-							<section id="cta">
 
-								<h2>Take a guess on my username</h2>
-								<p>You can pretty much always find me at a username which is a variation on the word "wugs". Check out some of my most-used ones:</p>
-								<ul class="actions">
-									<li><a href="/wugs" class="button alt">Tell me about wugs!</a></li>
-								</ul>
-							</section>
 						<div class="row">
 							<div class="6u 12u(narrower)">
 
 								<section class="box special">
 									<h3>Academic importance</h3>
 									<p align="justify">The discussions raised by this paper greatly influenced psycholinguistics and other fields relating to language acquisition. Furthermore, it provided an easily-explained and accessible example of how linguistic research can be done. Thus, wugs have become one of the most identifiable symbols of the field of linguistics, even for subfields not directly related to phonology and morphology. On top of it all, the paper which discusses the test is extremely accessible and readable, and I encourage everyone who finds this interesting to take at least a cursory look!</p>
-									<ul class="copyright">
-										<li>wugs</li>
-										<li>wuqs</li>
-										<li>vvugs</li>
-										<li>thewugs</li>
-										<li>wugsy</li>
+									<ul class="actions">
+										<li><a href=“http://dx.doi.org/10.1080/00437956.1958.11659661 class="button alt">Read the paper</a></li>
 									</ul>
 								</section>
 
@@ -108,6 +96,20 @@
 						</div>
 
   				</section>
+
+					<!-- CTA -->
+						<section id="cta">
+
+							<h2>Take a guess on my username</h2>
+							<p>You can pretty much always find me at a username which is a variation on the word "wugs". Check out some of my most-used ones:</p>
+							<ul class="copyright">
+								<li>wugs</li>
+								<li>wuqs</li>
+								<li>vvugs</li>
+								<li>thewugs</li>
+								<li>wugsy</li>
+							</ul>
+						</section>
 
 			<!-- Footer -->
 				<footer id="footer">
