--- a/wugs.html
+++ b/wugs.html
@@ -102,7 +102,7 @@
 
 							<h2>Take a guess on my username</h2>
 							<p>You can pretty much always find me at a username which is a variation on the word "wugs". Check out some of my most-used ones:</p>
-							<ul class="copyright">
+							<ul class="copyright" style="color:#fff;text-size:2em;">
 								<li>wugs</li>
 								<li>wuqs</li>
 								<li>vvugs</li>
