--- a/wugs.html
+++ b/wugs.html
@@ -54,7 +54,7 @@
 							<p>One of the questions that deeply interests linguists is that of how children acquire Language. The idea of an infant getting such a small amount of input but developing a system of communication that is robust and adaptable is nothing short of astounding. As linguistics is a science like any other, one must attempt to follow the experimental method to provide empirical proof of theories about language development.</p>
 
 							<p>The “<b>Wug Test</b>” was developed by <span class="tooltip">Dr. Jean Berko Gleason in 1958
-								<span class="tiptext">Berko, J. (1958). The child’s learning of English morphology. <i>WORD, 14</i>(2-3), 150-177. <a href=“http://dx.doi.org/10.1080/00437956.1958.11659661”>DOI.</a></span>
+								<span class="tiptext">Berko, J. (1958). The child’s learning of English morphology. <i>WORD, 14</i>(2-3), 150-177. <a href=“http://www.dx.doi.org/10.1080/00437956.1958.11659661”>DOI.</a></span>
 							</span> as a psycholinguistic test of a child’s learning of English <span class="tooltip">morphemes
 								<span class="tiptext">A <b>morpheme</b> is the smallest unit of meaning in a language, such as "dog" or the "s" that shows plurality in English.</span>
 							</span>. The idea, in a nutshell, is to present a child with a brand new word and see if they can successfully modify it to follow English’s rules of <span class="tooltip">allomorphy
@@ -80,7 +80,7 @@
 									<h3>Academic importance</h3>
 									<p align="justify">The discussions raised by this paper greatly influenced psycholinguistics and other fields relating to language acquisition. Furthermore, it provided an easily-explained and accessible example of how linguistic research can be done. Thus, wugs have become one of the most identifiable symbols of the field of linguistics, even for subfields not directly related to phonology and morphology. On top of it all, the paper which discusses the test is extremely accessible and readable, and I encourage everyone who finds this interesting to take at least a cursory look!</p>
 									<ul class="actions">
-										<li><a href=“http://dx.doi.org/10.1080/00437956.1958.11659661 class="button alt">Read the paper</a></li>
+										<li><a href=“http://www.dx.doi.org/10.1080/00437956.1958.11659661 class="button alt">Read the paper</a></li>
 									</ul>
 								</section>
 
