??? linking issues hello html 101

--- a/wugs.html
+++ b/wugs.html
@@ -54,7 +54,7 @@
 							<p>One of the questions that deeply interests linguists is that of how children acquire Language. The idea of an infant getting such a small amount of input but developing a system of communication that is robust and adaptable is nothing short of astounding. As linguistics is a science like any other, one must attempt to follow the experimental method to provide empirical proof of theories about language development.</p>
 
 							<p>The “<b>Wug Test</b>” was developed by <span class="tooltip">Dr. Jean Berko Gleason in 1958
-								<span class="tiptext">Berko, J. (1958). The child’s learning of English morphology. <i>WORD, 14</i>(2-3), 150-177. <a href=“http://www.dx.doi.org/10.1080/00437956.1958.11659661”>DOI.</a></span>
+								<span class="tiptext">Berko, J. (1958). The child’s learning of English morphology. <i>WORD, 14</i>(2-3), 150-177. <a href=http://dx.doi.org/10.1080/00437956.1958.11659661>DOI.</a></span>
 							</span> as a psycholinguistic test of a child’s learning of English <span class="tooltip">morphemes
 								<span class="tiptext">A <b>morpheme</b> is the smallest unit of meaning in a language, such as "dog" or the "s" that shows plurality in English.</span>
 							</span>. The idea, in a nutshell, is to present a child with a brand new word and see if they can successfully modify it to follow English’s rules of <span class="tooltip">allomorphy
