apparently quotes are a thing of the past thanks html5

--- a/wugs.html
+++ b/wugs.html
@@ -80,7 +80,7 @@
 									<h3>Academic importance</h3>
 									<p align="justify">The discussions raised by this paper greatly influenced psycholinguistics and other fields relating to language acquisition. Furthermore, it provided an easily-explained and accessible example of how linguistic research can be done. Thus, wugs have become one of the most identifiable symbols of the field of linguistics, even for subfields not directly related to phonology and morphology. On top of it all, the paper which discusses the test is extremely accessible and readable, and I encourage everyone who finds this interesting to take at least a cursory look!</p>
 									<ul class="actions">
-										<li><a href=“http://www.dx.doi.org/10.1080/00437956.1958.11659661 class="button alt">Read the paper</a></li>
+										<li><a href=http://dx.doi.org/10.1080/00437956.1958.11659661 class="button alt">Read the paper</a></li>
 									</ul>
 								</section>
 
