--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     <div align="center"><h1 style="font-size:80pt;font-family:verdana;color:#967bb6;"><br /><br /><br />i just got this for the email address tbh</h1></div>
+    <!-- what, still looking for more? nosy bastard. -->
   </body>
 </html>
