--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <title>wugs.me</title>
   </head>
   <body>
-    <div align="center"><h1 style="font-size:80pt;font-family:verdana;color:#967bb6;"><br /><br /><br />i just got this for the email address tbh</h1></div>
-    <!-- what, still looking for more? nosy bastard. -->
+    <div align="center"><h1 style="font-size:80pt;font-family:verdana;color:#967bb6;"><br /><br /><br />i just got this url for the email address</h1></div>
+    <!-- what, still looking for more? how nosy! well sorry, I'm not putting an entire ARG in my personal website. -->
+    <!-- or am i.... -->
   </body>
 </html>
